# LiquiSlime

./: README.md
adaptor-libs/liquislime-adaptor-rust/: Cargo.toml
adaptor-libs/liquislime-adaptor-rust/src/: game_api.rs  lib.rs
adaptors/: compile-adaptors.sh
adaptors/csharp/: .gitignore  compile-csharp.sh  generate-wat.sh
adaptors/csharp/SlimeDragger/: OperationsImpl.cs  Program.cs  adder.csproj  adder.txt  (+3 more)
adaptors/rust/: compile-rust.sh
liquislime-docker/web-files/: .gitignore  gl.js  index.html
main-game/crates/liquislime-wasmi/: Cargo.toml
main-game/crates/liquislime-wasmi/src/: adaptor.rs  component_adaptor.rs  cursed_adaptor.rs  lib.rs
main-game/crates/liquislime-wasmi/src/api/: from_game_api.rs  linker.rs  mod.rs  to_game_api.rs
main-game/crates/liquislime-wasmi/src/convert/: from_game_api.rs  to_game_api.rs
main-game/crates/liquislime-wasmi/src/wasip2/: mod.rs  type_builder.rs
main-game/crates/liquislime-wasmi/src/wasip2/cli/: environment.rs  exit.rs  mod.rs  stderr.rs  stdin.rs  stdout.rs  terminal_input.rs  terminal_output.rs  terminal_stderr.rs  terminal_stdin.rs  terminal_stdout.rs
main-game/crates/liquislime-wasmi/src/wasip2/clocks/: mod.rs  monotonic_clock.rs  wall_clock.rs
main-game/crates/liquislime-wasmi/src/wasip2/filesystem/: mod.rs  preopens.rs  types.rs
main-game/crates/liquislime-wasmi/src/wasip2/io/: error.rs  mod.rs  poll.rs  streams.rs
main-game/crates/liquislime-wasmi/src/wasip2/random/: mod.rs  random.rs
scripts/: build-and-run-web.sh  build.sh  new-build.sh  new-sys.sh  new-web.sh  run-sys.sh  run-web.sh
(+43 files in other folders)
