[package]
name = "liquislime-wasmi"
description = "A wasmi implementation for wasm in LiquiSlime"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wasmi = "1.1"
wasmi_wasi = "1.1"
waclay = "0.2.2"
wasmi_runtime_layer = "1.0"
liquislime-core = { path = "../liquislime-core" }
