[package]
name = "liquislime-wasmi"
description = "A wasmi implementation for wasm in LiquiSlime"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
wasmi = "1.1"
wasmi_wasi = { version = "1.1" }

waclay-wasi = { path = "../../../../waclay-wasi" }
wasmi_runtime_layer = { version = "1.0" }
liquislime-core = { path = "../liquislime-core" }
